--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
                                 Updates
                             </a>
                         </li>
+                        <li class="btn-group nav-item">
+                            <a href="javascript:void(0);" class="nav-link">
+                                <i class="nav-link-icon fa fa-edit"></i>
+                                COVID-19 Updates
+                            </a>
+                        </li>
                         <li class="dropdown nav-item">
                             <a href="javascript:void(0);" class="nav-link">
                                 <i class="nav-link-icon fa fa-cog"></i>
