added link to sidebar

--- a/user-details.html
+++ b/user-details.html
@@ -82,7 +82,7 @@
                                             <button type="button" tabindex="0" class="dropdown-item">User Account</button>
                                      
                                             <div tabindex="-1" class="dropdown-divider"></div>
-                                            <button type="button" tabindex="0" class="dropdown-item">Logout</button>
+                                            <a href="index.html"><button type="button" tabindex="0" class="dropdown-item">Logout</button></a>
                                         </div>
                                     </div>
                                 </div>
@@ -138,15 +138,21 @@
                             <ul class="vertical-nav-menu">
                                 <li class="app-sidebar__heading">Quick Links</li>
                                 <li>
-                                    <a href="index.html" class="mm-active">
+                                    <a href="users.html" class="mm-active">
                                         <i class="metismenu-icon pe-7s-users"></i>
-                                        All Users
+                                        Online Users
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="index.html">
+                                    <a href="users.html">
                                         <i class="metismenu-icon pe-7s-rocket"></i>
                                         Tested Postive
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="offline-users.html" class="mm-active">
+                                        <i class="metismenu-icon pe-7s-users"></i>
+                                        Offline Users
                                     </a>
                                 </li>
                                 
