--- a/users.html
+++ b/users.html
@@ -88,7 +88,7 @@
                                             <button type="button" tabindex="0" class="dropdown-item">User Account</button>
                                      
                                             <div tabindex="-1" class="dropdown-divider"></div>
-                                            <button type="button" tabindex="0" class="dropdown-item">Logout</button>
+                                            <a href="index.html"></a><button type="button" tabindex="0" class="dropdown-item">Logout</button></a>
                                         </div>
                                     </div>
                                 </div>
@@ -153,15 +153,21 @@
                             <ul class="vertical-nav-menu">
                                 <li class="app-sidebar__heading">Quick Links</li>
                                 <li>
-                                    <a href="index.html" class="mm-active">
+                                    <a href="users.html" class="mm-active">
                                         <i class="metismenu-icon pe-7s-users"></i>
-                                        All Users
+                                        Online Users
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="index.html">
+                                    <a href="users.html">
                                         <i class="metismenu-icon pe-7s-rocket"></i>
                                         Tested Postive
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="offline-users.html" class="mm-active">
+                                        <i class="metismenu-icon pe-7s-users"></i>
+                                        Offline Users
                                     </a>
                                 </li>
                                 
@@ -194,7 +200,7 @@
                                         <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
                                             <ul class="nav flex-column">
                                                 <li class="nav-item">
-                                                    <a href="index.html" class="nav-link">
+                                                    <a href="users.html" class="nav-link">
                                                         <i class="nav-link-icon lnr-inbox"></i>
                                                         <span>
                                                             Normal condition
@@ -203,7 +209,7 @@
                                                     </a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a href="index.html" class="nav-link">
+                                                    <a href="users.html" class="nav-link">
                                                         <i class="nav-link-icon lnr-inbox"></i>
                                                         <span>
                                                             Warning condition
@@ -212,7 +218,7 @@
                                                     </a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a href="index.html" class="nav-link">
+                                                    <a href="users.html" class="nav-link">
                                                         <i class="nav-link-icon lnr-book"></i>
                                                         <span>
                                                             Danger Condition
