--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                   
                 <div class="app-main__outer">
                     <div class="app-main__inner">
-                        <div class="app-page-title col-md-10">
+                        <div class="row">
+                        <div class="col-md-2"></div>
+                        <div class="app-page-title col-md-5" style="margin-left: 1px;">
                             <div class="page-title-wrapper">
                                 <div class="page-title-heading">
                                     <div class="page-title-icon">
@@ -33,9 +35,11 @@
                                 </div>
                                
                             </div>
-                        </div>  
-                        <div class="col-md-3"></div>
-                        <div class="main-card card col-md-6">
+                        </div>
+                    </div>
+                        <div class="row">
+                        <div class="col-md-2"></div>
+                        <div class="main-card card col-md-5">
                             <div class="card-body">
                                 <form action='users.html' method='POST' class="needs-validation" novalidate>
                                     <div class="form-row">
@@ -102,6 +106,7 @@
                                 </script>
                             </div>
                         </div>
+                    </div>
                     </div> 
 
                 </div>
